# mp4-audio-extractor

./: .gitattributes  .gitignore
mp4-audio-extractor/: README.md  package-lock.json  package.json  功能更新1.md  功能更新2.md  功能更新3.md  开发文档.md  当前状况1.md  提取音频.bat
mp4-audio-extractor/cli/: Cargo.toml
mp4-audio-extractor/cli/src/: main.rs
mp4-audio-extractor/src/: index.html  main.js  styles.css
mp4-audio-extractor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
mp4-audio-extractor/src-tauri/icons/: icon.icns
mp4-audio-extractor/src-tauri/src/: lib.rs  main.rs
mp4-audio-extractor/tools/: setup-whisper.ps1
